Changed Settings.yaml to Assets.yaml

--- a/Resources/Private/Templates/Standard/Index.html
+++ b/Resources/Private/Templates/Standard/Index.html
@@ -48,6 +48,7 @@
 			<th>Required Js</th>
 			<td>
 				<span class="default-red require-js"></span>
+				<as:requireJs name="Demo.Asset:Main" />
 				<as:requireJs name="Demo.Asset:Require" />
 				<as:requireJs flush="true" />
 			</td>
